turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:20: error: package com is not a value
  com(rule(ind))
  ^